test/conformance/chainsaw/cel/http/cluster/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-cel-http-cluster
  labels:
    size: default
